<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/job_detail_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            app:behavior_hideable="true"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            tools:context=".ModalBottomSheetFragment">

            <LinearLayout
                android:id="@+id/detail_content_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/content_description_modal_icon"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_remove" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:paddingHorizontal="32dp">

                    <ImageView
                        android:id="@+id/detail_company_logo"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/shape_company_logo"
                        android:contentDescription="@string/content_description_company_logo"
                        tools:src="@drawable/logo_no_company" />

                    <RelativeLayout
                        android:id="@+id/detail_company_wrapper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/detail_company_logo"
                        android:background="@android:color/transparent">

                        <TextView
                            android:id="@+id/detail_position"
                            style="@style/Theme.Typography.Headline5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?android:textColorPrimary"
                            tools:text="Digital Art Director" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/detail_position"
                            android:layout_marginTop="4dp"
                            android:background="@android:color/transparent"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/detail_location_icon"
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginEnd="4dp"
                                android:background="@android:color/transparent"
                                android:contentDescription="@string/content_description_icon_location"
                                android:src="@drawable/ic_location" />

                            <TextView
                                android:id="@+id/detail_location"
                                style="@style/Theme.Typography.Subtitle2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:background="@android:color/transparent"
                                android:textColor="?android:textColorSecondary"
                                tools:text="San Francisco, CA" />

                        </LinearLayout>

                    </RelativeLayout>


                </RelativeLayout>

                <View
                    android:id="@+id/detail_company_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="32dp"
                    android:background="@color/secondary" />

                <LinearLayout
                    android:id="@+id/detail_company_detail_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="28dp"
                    android:baselineAligned="false"
                    android:paddingHorizontal="32dp">

                    <LinearLayout
                        android:id="@+id/detail_company_name_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".30"
                        android:background="@drawable/shape_detail_company_item"
                        android:orientation="vertical"
                        android:paddingEnd="8dp"
                        tools:ignore="RtlSymmetry">

                        <TextView
                            style="@style/Theme.Typography.Subtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:text="@string/detail_label_company"
                            android:textAlignment="center"
                            android:textColor="?android:textColorSecondary" />

                        <TextView
                            android:id="@+id/detail_company_name"
                            style="@style/Theme.Typography.Headline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:textAlignment="center"
                            android:textColor="?android:textColorPrimary"
                            tools:text="Google" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/detail_company_salary_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight=".33"
                        android:background="@drawable/shape_detail_company_item"
                        android:orientation="vertical"
                        android:paddingEnd="8dp"
                        tools:ignore="RtlSymmetry">

                        <TextView
                            style="@style/Theme.Typography.Subtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:text="@string/detail_label_salary"
                            android:textAlignment="center"
                            android:textColor="?android:textColorSecondary" />

                        <TextView
                            android:id="@+id/detail_company_salary"
                            style="@style/Theme.Typography.Headline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:textAlignment="center"
                            android:textColor="?android:textColorPrimary"
                            tools:text="$ 13.000" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/detail_company_working_hours_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight=".30"
                        android:orientation="vertical"
                        android:paddingEnd="8dp"
                        tools:ignore="RtlSymmetry">

                        <TextView
                            style="@style/Theme.Typography.Subtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:text="@string/detail_label_working_hours"
                            android:textAlignment="center"
                            android:textColor="?android:textColorSecondary" />

                        <TextView
                            android:id="@+id/detail_company_working_hours"
                            style="@style/Theme.Typography.Headline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:textAlignment="center"
                            android:textColor="?android:textColorPrimary"
                            tools:text="Flexible" />

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/detail_description_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="32dp">

                    <TextView
                        android:id="@+id/detail_description_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/detail_label_description"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/detail_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/detail_description_label"
                        android:lineSpacingExtra="2dp"
                        android:textColor="@color/placeholder_text"
                        android:textSize="16sp"
                        tools:text="PhD or equivalent in Computer Science, Engineering, Mathematics or related field AND 2-years full-time Software Engineering work experience OR 5-years full-time Software Engineering work experience, WHICH INCLUDES 3-years total technical software engineering experience in one or more of the following areas:
Programming language (e.g. JavaScript, CSS, Node.js)
Architecting, building, and maintaining web applications
Note the 3-years total of specialized software engineering experience may have been gained through education and full-time work experience, additional training, coursework, research, or similar (OR some combination of these). The years of specialized experience are not necessarily in addition to the years of Education &amp; full-time work experience indicated." />

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/detail_content_wrapper"
                android:layout_alignParentEnd="true"
                android:layout_gravity="top"
                android:background="?android:background">

                <Button
                    android:id="@+id/detail_submit_application_btn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16sp"
                    android:background="@drawable/shape_primary_button"
                    android:text="@string/detail_submit_application_btn"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>